--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
+    <header>
+        <h1>
+
+        </h1>Welcome to your Weather Dash!
+    </header>
     
 </body>
 </html>
