--- a/index.html
+++ b/index.html
@@ -6,64 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Link the DayJS library -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="col-12">
         <h1>Welcome to your Weather Dash!</h1>
     </header>
-    <section class="col-10">
-        <section class="search">
+    <section class="row">
+        <!-- Search-->
+        <section class="search col-3">
             <div class="search-box">
                 <h2>Search for a city:</h2>
-                <form>Type location here</form>
+                <form>
+                    <label for="search" value="html">Type location here</label>
+                </form>
                 <button>Search</button>
             </div>
-            <div class="search-results">
+            <div class="search-results row">
                 <button class="result">Atlanta</button>
                 <button class="result">Los Angeles</button>
                 <button class="result">Baltimore</button>
             </div>
         </section>
-        <section class="forcast">
-            <div class="current">
-                <h2>Atlanta (3/7/2023)</h2>
-                <icon class="current-icon"></icon>
-                <div class="current-temp">Temp: 90.0˚ F</div>
-                <div class="current-wind"> Wind: 8.43 MPH</div>
-                <div class="current-humid">Humidity: 91%</div>
+        <!--Forecast -->
+        <section class="forecast col-9 row">
+            <!-- Current Forecast -->
+            <div class="column">
+                <div class="row">
+                    <h2>Atlanta (3/7/2023)</h2>
+                    <icon class="current-icon"></icon>
+                </div>
+                <div class="current row">
+                    <div class="current-temp col-3">Temp: 90.0˚ F</div>
+                    <div class="current-wind col-3"> Wind: 8.43 MPH</div>
+                    <div class="current-humid col-3">Humidity: 91%</div>
+                </div>
             </div>
-            <div class="5-day">
-                <div class="day-1">
-                    <h2 class="date">Atlanta (3/8/2023)</h2>
+            <!-- 5-Day Forecast -->
+            <div class="five-day row">
+                <h2>5-Day Forecast</h2>
+                <div class="day day-1 col-2">
+                    <h3 class="date">(3/8/2023)</h3>
                     <icon class="icon-1"></icon>
                     <div class="current-temp">Temp: 90.0˚ F</div>
                     <div class="current-wind"> Wind: 8.43 MPH</div>
                     <div class="current-humid">Humidity: 91%</div>
                 </div>
-                <div class="day-2">
-                    <h2 class="date">(3/9/2023)</h2>
+                <div class="day day-2 col-2">
+                    <h3 class="date">(3/9/2023)</h3>
                     <icon class="icon-1"></icon>
                     <div class="current-temp">Temp: 90.0˚ F</div>
                     <div class="current-wind"> Wind: 8.43 MPH</div>
                     <div class="current-humid">Humidity: 91%</div>
                 </div>
-                <div class="day-3">
-                    <h2 clss="date">(3/10/2023)</h2>
+                <div class="day day-3 col-2">
+                    <h3 clss="date">(3/10/2023)</h3>
                     <icon class="icon-1"></icon>
                     <div class="current-temp">Temp: 90.0˚ F</div>
                     <div class="current-wind"> Wind: 8.43 MPH</div>
                     <div class="current-humid">Humidity: 91%</div>
                 </div>
-                <div class="day-4">
-                    <h2 class="date">(3/11/2023)</h2>
+                <div class="day day-4 col-2">
+                    <h3 class="date">(3/11/2023)</h3>
                     <icon class="icon-1"></icon>
                     <div class="current-temp">Temp: 90.0˚ F</div>
                     <div class="current-wind"> Wind: 8.43 MPH</div>
                     <div class="current-humid">Humidity: 91%</div>
                 </div>
-                <div class="day-5">
-                    <h2 class="date">(3/12/2023)</h2>
+                <div class="day day-5 col-2">
+                    <h3 class="date">(3/12/2023)</h3>
                     <icon class="icon-1"></icon>
                     <div class="current-temp">Temp: 90.0˚ F</div>
                     <div class="current-wind"> Wind: 8.43 MPH</div>
@@ -73,8 +91,12 @@
 
         </section>
     </section>
-    <footer>weather-dash</footer>
+    <footer class="col-12">Weather Dash | ©Erynn M. Affeldt 2023</footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
+    <script src="./Assets/js/script.js"></script>
 </body>
 
 </html>
